--- a/model.ipynb
+++ b/model.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The legendary Titanic ML competition. The first challenge for anyone to dive into ML competitions.\n",
+    "The legendary Titanic ML competition. The first challenge for anyone to dive into ML competitions. \n",
     "\n",
-    "This problem helped me to understand the \"Exploratory Data Analysis\".\n",
+    "This is my first kaggle problem. I have created many notebooks with different models and done many submission in the Kaggle. After referring other resources, I have created my final notebook here.\n",
     "\n",
     "[Click here](https://www.kaggle.com/c/titanic) for the Kaggle link."
    ]
@@ -22,22 +22,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plan"
+    "## Table of contents\n",
+    "* [Introduction](#introduction)\n",
+    "* [Loading Modules](#modules)\n",
+    "* [Data](#data)\n",
+    "* [Exploratory Data Analysis (EDA)](#eda)\n",
+    "* [Feature Engineering](#feature_engineering)\n",
+    "* [Analysis](#analysis)\n",
+    "* [Results and Discussion](#results)\n",
+    "* [Submission](#submission)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Importing all the required libraries\n",
-    "2. Importing the dataset"
+    "## Introduction <a name=\"introduction\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading Modules"
+    "As in the \"Table of Contents\", first I will explore the data and looks for null values. \n",
+    "\n",
+    "In the \"Exploratory Data Analysis\" phase, I will be able to compare the survivers to the each features. The following quesions will be answered in this phase.\n",
+    "* How many passengers survived the disaster?\n",
+    "* \n",
+    "\n",
+    "Next, we can apply the feature engineering for both the training and the test data. The feature enginneering helps get more features from the existing features and to improve the model accuracy. In my first submission (for trial), I have created the model witout feature engineering. The model accuracy was very low.  \n",
+    "\n",
+    "In the \"Analysis\" section, we will select only the required features from the training dataset. Once our dataset is ready for the model training, we will apply the following classification algorithms to the training dataset. \n",
+    "* Logistic Regression\n",
+    "* Support Vector Machines (SVC)\n",
+    "* k-Nearest Neighbor (KNN)\n",
+    "* Decision Tree\n",
+    "* Random Forest\n",
+    "* Naive Bayes (GaussianNB)\n",
+    "\n",
+    "To understand the accuracy, I will find both the training accuracy and testing accuracy for each alogrithms. \n",
+    "\n",
+    "In the \"Results and Discussion\" section, we will do the comparisons of all the models and choose for the kaggle test data. \n",
+    "\n",
+    "In the \"Submission\" section, the choosen model will be used to predict the survival for the \"test\" data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading Modules <a name=\"modules\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All required modules are imported in the next cell."
    ]
   },
   {
@@ -65,17 +106,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Data <a name=\"data\"></a>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading Datasets"
+    "We will import both the train and test data at first. All feature engineering will be applied to the test data when applying to the train data."
    ]
   },
   {
@@ -92,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets have a look at the trai dataset."
+    "Lets have a look at the training dataset."
    ]
   },
   {
@@ -297,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summarizing all columns"
+    "#### Summary all columns"
    ]
   },
   {
@@ -339,10 +380,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following columns contains the null values:\n",
+    "Looks like the following columns contains the null values.\n",
     "1. Age : 177 null values\n",
     "2. Cabin: 687 null values\n",
-    "3. Embarked: 2 null values"
+    "3. Embarked: 2 null values\n",
+    "\n",
+    "**Numerical columns:** PassengerId, Survived, Pclass, Age, SibSp, Parch, and Fare\n",
+    "\n",
+    "**Categorical columns:** Name, Sex, Ticket, Cabin, and Embarked"
    ]
   },
   {
@@ -506,11 +551,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### Categorical columns"
    ]
@@ -617,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploratory Data Analysis (EDA)"
+    "## Exploratory Data Analysis (EDA) <a name=\"eda\"></a>"
    ]
   },
   {
@@ -1445,7 +1485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Engineering"
+    "## Feature Engineering <a name=\"feature_engineering\"></a>"
    ]
   },
   {
@@ -3330,7 +3370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature Selection"
+    "## Methodology <a name=\"methodology\"></a>"
    ]
   },
   {
@@ -3446,7 +3486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Machine Learning Models"
+    "## Analysis <a name=\"analysis\"></a>"
    ]
   },
   {
@@ -3712,7 +3752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model Comparison"
+    "## Results and Discussion <a name=\"results\"></a>"
    ]
   },
   {
@@ -3721,6 +3761,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Submission <a name=\"submission\"></a>"
+   ]
   },
   {
    "cell_type": "code",
